test/errors/redeclare_variable.correct
error: redeclare_variable.li:2:5: variable 'x' is already declared in this scope
│ let x = 2;
│ ~~~~~~~~~
│     ^
